# archbuilder-ai-system

./: .gitignore  ArchBuilder.sln  README.md  seed.py  todo.md  version.md
.github/: copilot-instructions.md
.github/instructions/: ai-integration.instructions.md  ai-prompt-standards.instructions.md  api-standards.instructions.md  architect.instructions.md  architecture-decisions.instructions.md  developer.instructions.md  dotnet-backend.instructions.md  python-fastapi.instructions.md  qa.instructions.md  security.instructions.md  ux-ui-design.instructions.md
.github/workflows/: ci.yml
.mds/: DYNAMO_DOCUMENTATION.md  REVIT_API_DOCUMENTATION.md
alembic/: alembic.ini  env.py
app/core/: exceptions.py  logging.py  seed.py
app/security/: audit.py  authentication.py  authorization.py  password.py
configs/ai-prompts/: model-configs.json
configs/ai-prompts/en/: translations.json
configs/ai-prompts/tr/: translations.json
configs/app-settings/: cultural-preferences.json  regional-config.json  room-types.json
configs/building-codes/: regional-codes.json
docs/api/: endpoints.md
docs/architecture/: system-overview.md
docs/desktop-app/: cloud-client-integration.md
docs/modules/: vertex-ai-client.md
docs/services/: ai-service.md  rag-service.md
src/cloud-server/: Dockerfile  Makefile  conftest.py  main.py  pyproject.toml  requirements.txt  run_tests.py  test_billing.py  test_billing_simple.py  test_notifications_comprehensive.py  test_regional.py
src/cloud-server/app/: __init__.py
src/cloud-server/app/ai/: __init__.py
src/cloud-server/app/ai/github/: __init__.py  client.py
src/cloud-server/app/ai/prompts/: __init__.py  engine.py
src/cloud-server/app/ai/validation/: __init__.py  validator.py
src/cloud-server/app/ai/vertex/: __init__.py  client.py
src/cloud-server/app/api/: ai.py  ai_enhanced.py  auth.py  billing.py  documents.py  notifications.py  projects.py  regional.py  subscriptions.py  system.py  tasks.py
src/cloud-server/app/core/: auth.py  cache.py  config.py  database.py  database_optimized.py  encryption.py  global_prompt_engine.py  localization.py  logging.py  measurement_converter.py  middleware.py  performance.py  security.py
src/cloud-server/app/core/auth/: __init__.py  authentication.py
src/cloud-server/app/core/billing/: __init__.py  billing_service.py
src/cloud-server/app/dao/: __init__.py  base_dao.py  user_dao.py
src/cloud-server/app/dependencies/: services.py
src/cloud-server/app/documents/: processors.py
src/cloud-server/app/security/: __init__.py  authentication.py  authorization.py  crypto.py  middleware.py
src/cloud-server/app/services/: __init__.py  ai_service.py  document_service.py  project_service.py  rag_service.py
src/cloud-server/app/services/ai/fallback/: service.py
src/cloud-server/app/services/ai/github/: client.py
src/cloud-server/app/services/ai/prompts/: engine.py
src/cloud-server/app/services/ai/validation/: validator.py
src/cloud-server/app/services/ai/vertex/: client.py
src/cloud-server/app/services/billing/: __init__.py  subscription_service.py  usage_tracking.py
src/cloud-server/app/services/notifications/: email_service.py  notification_scheduler.py
src/cloud-server/app/services/tasks/: ai_tasks.py  monitoring_dashboard.py  task_queue_service.py  worker_management.py
src/cloud-server/app/utils/: __init__.py  cache_manager.py  config_manager.py  performance_tracker.py  validation_service.py
src/cloud-server/templates/email/: project_created.html  welcome.html  welcome.txt
src/cloud-server/tests/: README.md  __init__.py  conftest.py  test_security.py
src/cloud-server/tests/integration/: test_api_endpoints.py  test_service_integration.py
src/cloud-server/tests/test_integration/: __init__.py  test_api_endpoints.py
src/cloud-server/tests/test_unit/: __init__.py  test_security.py
src/cloud-server/tests/test_unit/test_dao/: __init__.py  test_base_dao.py  test_user_dao.py
src/cloud-server/tests/unit/: test_ai_service.py  test_document_service.py  test_rag_service.py
src/configs/ai-prompts/: model-configs.json
src/configs/ai-prompts/de/: translations.json
src/configs/ai-prompts/en/: translations.json
src/configs/ai-prompts/tr/: translations.json
src/configs/app-settings/: cultural-preferences.json  regional-config.json  room-types.json
src/configs/building-codes/: regional-codes.json
src/desktop-app/: App.xaml  App.xaml.cs  ArchBuilder.csproj  Program.cs
src/desktop-app/CloudClient/: CloudApiClient.cs
src/desktop-app/Controls/: ModernButton.xaml
src/desktop-app/Core/: HttpResponseExtensions.cs  RelayCommand.cs  ServiceLocator.cs
src/desktop-app/Models/: ProjectFile.cs  ProjectInfo.cs  ProjectStatus.cs
src/desktop-app/Services/: AuthService.cs  CloudStorageService.cs  ConfigurationService.cs  FileImportService.cs  IConfigurationService.cs  IProjectDataService.cs  ISettingsService.cs  LoggerService.cs  NavigationService.cs  ProjectDataService.cs  ServiceExceptions.cs  SettingsService.cs
src/desktop-app/Styles/: AppleTheme.xaml  TextBlockStyles.xaml  TextBoxStyles.xaml
src/desktop-app/ViewModels/: AdditionalViewModels.cs  HomeViewModel.cs  MainViewModel.cs  ProjectViewModel.cs
src/desktop-app/Views/: HomeView.xaml  HomeView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProjectView.xaml  ProjectView.xaml.cs  StartupView.xaml
src/revit-plugin/: ArchBuilderRevit.addin  ArchBuilderRevit.csproj  Program.cs
src/revit-plugin/Commands/: BaseRevitCommand.cs  CreateRoomCommand.cs  CreateWallCommand.cs  GeometricOperationsCommand.cs  InsertWindowCommand.cs  PlaceDoorCommand.cs
src/revit-plugin/UI/: ArchBuilderRibbonPanel.cs
src/revit-plugin/UI/Availability/: CommandAvailability.cs
src/revit-plugin/UI/Dialogs/: AILayoutGenerationDialog.cs  AIProgressDialog.cs  AIPromptsHelpDialog.cs
src/shared/: ArchBuilder.Shared.csproj
src/shared/DataContracts/: ArchBuilderDataContracts.cs
